--- a/storage/papers/css/rash.css
+++ b/storage/papers/css/rash.css
@@ -199,6 +199,7 @@ html {
     padding: 10px;
     margin-left: auto;
     margin-right: auto;
+    z-index: 102;
 }
 
 .paper-container .footer span, .footer div {
